dist/manifests/kubernetes-cluster-manifests/fluent-bit-centralized/5fluent-bit-centralized.deploy.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: fluent-bit-centralized
  namespace: kube-system
  labels:
    k8s-app: fluent-bit-centralized
    version: v1
    kubernetes.io/cluster-service: "true"
spec:
  replicas: 2
  selector:
    matchLabels:
      k8s-app: fluent-bit-centralized
      version: v1
  template:
    metadata:
      labels:
        k8s-app: fluent-bit-centralized
        version: v1
        kubernetes.io/cluster-service: "true"
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "2020"
        prometheus.io/path: /api/v1/metrics/prometheus
        
    spec:
      serviceAccountName: fluent-bit-centralized
      containers:
      - name: fluent-bit-centralized
        image: fluent/fluent-bit:1.0.5
        # command:
        resources:
          limits:
            cpu: ".2"
            memory: "100Mi"
          requests:
            cpu: "0.05"
            memory: "10Mi"
          
        ports:
        - containerPort: 2020
          name: http-metrics
        - containerPort: 5140
          name: syslog
