dist/manifests/kubernetes-cluster-manifests/fluent-bit-centralized/6fluent-bit-centralized.svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: fluent-bit-centralized
  namespace: kube-system
  labels:
    k8s-app: fluent-bit-centralized
    version: v1
    kubernetes.io/cluster-service: "true"
  # annotations:
spec:
  type: ClusterIP
  ports:
    - port: 2020
      targetPort: 2020
      protocol: TCP
      name: http-metrics
    - port: 5140
      targetPort: 5140
      protocol: TCP
      name: syslog
  selector:
    k8s-app: fluent-bit-centralized
