dist/manifests/kubernetes-cluster-manifests/fluent-bit-centralized/7fluent-bit-centralized.ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: fluent-bit-centralized-ingress
  namespace: kube-system
spec:
  rules:
  - host: fluent-bit-centralized.scarlettlab.com
    http:
      paths:
      - path: /
        backend:
          serviceName: fluent-bit-centralized-svc
          servicePort: 80
